
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:weightSum="190"
        android:background="@drawable/sfondomesseapp"
        android:id="@+id/activity_main">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="67"
            android:paddingTop="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/social"
                android:scaleType="centerInside"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:onClick="social"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/orario"
                android:scaleType="centerInside"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:onClick="orario"/>

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_weight="1"
            android:id="@+id/tableRow2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="Social"
                android:id="@+id/textView1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/orario"
                android:id="@+id/textView2"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_weight="67"
            android:id="@+id/tableRow3"
            android:weightSum="10"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/notizie"
                android:scaleType="centerInside"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:onClick="news"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/calendario"
                android:scaleType="centerInside"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:onClick="calendar"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false"
            android:layout_weight="1"
            android:id="@+id/tableRow6"
            android:weightSum="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:text="@string/notizie"
                android:id="@+id/textView1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/eventi"
                android:id="@+id/textView1"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false"
            android:layout_weight="67"
            android:id="@+id/tableRow4"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:src="@drawable/voti"
                android:scaleType="centerInside"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:onClick="voti"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/circolari"
                android:scaleType="centerInside"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:onClick="notavailable"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:id="@+id/tableRow6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/registro"
                android:id="@+id/textView1"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/circolari"
                android:id="@+id/textView1"
                android:textColor="@android:color/black" />
        </TableRow>

    </TableLayout>

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>
